--- a/composer.json
+++ b/composer.json
@@ -48,7 +48,7 @@
 
     "scripts": {
         "lint": "eslint ./src --ext .ts,.tsx",
-        "test": "/Users/shobhitsingh/ShobhitTestProjects/ff-php-server-sdk/tests/Integration",
+        "test": "/vendor/bin/phpunit",
         "test-coverage": "vendor/bin/phpunit --coverage-html=coverage"
 
     }
