--- a/composer.json
+++ b/composer.json
@@ -49,6 +49,6 @@
     "scripts": {
         "lint": "find . -name '*.php' -exec php -l {} \\;",
         "test": "/vendor/bin/phpunit",
-        "test-coverage": "./vendor/bin/phpunit --coverage-html=coverage /Users/shobhitsingh/downloads"
+        "test-coverage": "./vendor/bin/phpunit --coverage-html=coverage"
     }
 }
