--- a/composer.json
+++ b/composer.json
@@ -48,7 +48,6 @@
 
     "scripts": {
         "lint": "find . -name '*.php' -exec php -l {} \\;",
-        "test": "/vendor/bin/phpunit",
-        "test-coverage": "./vendor/bin/phpunit --coverage-html=coverage"
+        "coverage": "./vendor/bin/phpunit --coverage-html=coverage"
     }
 }
